--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,17 @@ fonttools==4.47.2
 fsspec==2023.12.2
 gitdb==4.0.11
 GitPython==3.1.41
+google-api-core==2.15.0
+google-api-python-client==2.115.0
+google-auth==2.27.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.62.0
 gradio==3.50.2
 gradio_client==0.6.1
 h11==0.14.0
 httpcore==1.0.2
+httplib2==0.22.0
 httpx==0.26.0
 huggingface-hub==0.20.3
 idna==3.6
@@ -66,6 +73,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.18.1
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
 orjson==3.9.12
 packaging==23.2
 pandas==2.0.3
@@ -76,6 +84,8 @@ posthog==3.3.2
 prompthub-py==4.0.0
 protobuf==4.25.2
 pyarrow==15.0.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pydantic==1.10.14
 pydeck==0.8.1b0
 pydub==0.25.1
@@ -91,8 +101,10 @@ referencing==0.32.1
 regex==2023.12.25
 requests==2.31.0
 requests-cache==0.9.8
+requests-oauthlib==1.3.1
 rich==13.7.0
 rpds-py==0.17.1
+rsa==4.9
 safetensors==0.4.2
 scikit-learn==1.3.2
 scipy==1.10.1
@@ -121,6 +133,7 @@ triton==2.1.0
 typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
+uritemplate==4.1.1
 url-normalize==1.4.3
 urllib3==2.1.0
 uvicorn==0.27.0
